--- a/first/index.css
+++ b/first/index.css
@@ -1,40 +1,26 @@
-* {
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  background-color: #D8D8D8;
+  width: 100%;
+  height: 100vh;
 }
 
 .header {
-  display: block;
-  background: #444444;
   width: 100%;
-  height: 125px;
-}
-
-.left-side {
-  background: #d8d8d8;
-  width: 125px;
-  height: calc(100vh - 125px);
-  float: left;
-}
-
-.right-side {
-  background: #d8d8d8;
-  width: 125px;
-  height: calc(100vh - 125px);
-  float: right;
+  height: 15vh;
+  background-color: #444444;
 }
 
 .main-content {
-  background: #efefef;
-  margin-left: 125px;
-  width: calc(100vw - 250px);
-  height: calc(100vh - 225px);
+  background-color: #EFEFEF;
+  margin: 0 auto;
+  width: 75%;
+  height: 75vh;
 }
 
-.footer {
-  background: #000000;
-  margin-left: 125px;
-  width: calc(100vw - 250px);
-  height: 100px;
+.footer { 
+  background-color: #222222;
+  margin: 0 auto;
+  width: 75%;
+  height: 10vh;
 }
